# kafka-tutorial

./: .gitignore  README.md
admin/: kafka-admin.md
kafka-coding/python-client/confluent-kafka-python/: .env  .safety-policy.yml  README.md  key_schema.avsc  pyproject.toml  value_schema.avsc
kafka-coding/python-client/confluent-kafka-python/kafka_setup/: docker-compose.yml
kafka-coding/python-client/confluent-kafka-python/src/admin/: kafka_admin.py
kafka-coding/python-client/confluent-kafka-python/src/consumer/: kafka_consumer.py  kafka_consumer_avro.py
kafka-coding/python-client/confluent-kafka-python/src/consumer/batch/: consumer_batch.py
kafka-coding/python-client/confluent-kafka-python/src/consumer/model/: consumer_model.py
kafka-coding/python-client/confluent-kafka-python/src/consumer/partition/: kafka_consumer_partition.py
kafka-coding/python-client/confluent-kafka-python/src/models/: __init__.py
kafka-coding/python-client/confluent-kafka-python/src/producer/: kafka_poducer_avro.py  kafka_producer.py
kafka-coding/python-client/confluent-kafka-python/src/producer/asynchrnous/: kafka_producer.py
kafka-coding/python-client/confluent-kafka-python/src/producer/avro/: kafka_poducer_avro.py
kafka-coding/python-client/confluent-kafka-python/src/producer/batch/: kafka_producer_batch.py
kafka-coding/python-client/confluent-kafka-python/src/producer/model/: producer_model.py
kafka-coding/python-client/confluent-kafka-python/src/producer/partition/: custom_partitioner.py  producer_key_base.py  producer_key_manual.py  producer_key_random.py
kafka-coding/python-client/confluent-kafka-python/src/producer/schema/: producer_schema.py
kafka-coding/python-client/confluent-kafka-python/src/registry/: schema-registry-client.py  schema-registry.py  schema_compatibility.py
kafka-coding/python-client/confluent-kafka-python/src/registry/crud/: delete_schema.py  list_schema.py  register_json_schema.py  register_schema.py
kafka-coding/python-client/confluent-kafka-python/src/registry/security/: schema_security.py
kafka-coding/python-client/confluent-kafka-python/src/util/: kafka_util.py
kafka-coding/python-client/confluent-kafka-python/tests/producer/: test_kafka_producer.py
kafka-coding/python-client/kafka-python-client/: .bandit  .flake8  README.md  pyproject.toml
kafka-coding/python-client/kafka-python-client/kafka/: .env  docker-compose.yml
kafka-coding/python-client/kafka-python-client/src/cluster/: cluster_metadata.py
kafka-coding/python-client/kafka-python-client/src/consumer/: fetching_messages_timestamp.py  kafka_topic_subscribe.py
kafka-coding/python-client/kafka-python-client/src/consumer/batch/: batch_procesing.py
kafka-coding/python-client/kafka-python-client/src/consumer/group/: consumer_group_lag_monitoring.py  kafka_consumer_group.py
kafka-coding/python-client/kafka-python-client/src/consumer/message/: kafka_consumer.py
kafka-coding/python-client/kafka-python-client/src/consumer/offset/: consumer_without_auto_commit.py  consuming_from_specific_offsets.py
kafka-coding/python-client/kafka-python-client/src/consumer/timeout/: consuming_with_timeout.py
kafka-coding/python-client/kafka-python-client/src/producer/: kafka_producer_new.py
kafka-coding/python-client/kafka-python-client/src/producer/asynchronus/: asynchronus_producer.py
kafka-coding/python-client/kafka-python-client/src/producer/batch/: batch_producing_messages.py
kafka-coding/python-client/kafka-python-client/src/topic/: kafka_earliest_offset.py  kafka_latest_offset.py  kafka_offset_using_admin.py  kafka_partition_offset.py  kafka_topic_creation.py  kafka_topic_partition.py
kafka-coding/python-client/kafka-python-client/tests/: conftest.py
kafka-coding/python-client/kafka-python-client/tests/integration/: test_kafka_topic.py
kafka-coding/python-client/kafka-python-client/tests/unit/: test_message_producer.py
(+564 files in other folders)
